--- a/quotes/imagination.html
+++ b/quotes/imagination.html
@@ -10,7 +10,10 @@
 "
 p 98 The Tzuba language exists only in the author's
   <a href="../scraps/sisyphus3.html">imagination</a>.
-"</pre>
+"
+
+A Tour Of The Lattice
+Maurice Scully</pre>
 
 </body>
 </html> 
